beginning with tablet reforming

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,9 +35,9 @@
                 <nav class="header__nav">
 
                     <ul class="header__list list">
+                        <li class="header__item"><a class="header__link link" href="./index.html">Студія</a></li>
                         <li class="header__item"><a class="header__link link header__link--current"
-                                href="./index.html">Студія</a></li>
-                        <li class="header__item"><a class="header__link link" href="./portfolio.html">Портфоліо</a></li>
+                                href="./portfolio.html">Портфоліо</a></li>
                         <li class="header__item"><a class="header__link link" href="#">Контакти</a></li>
                     </ul>
                 </nav>
@@ -351,6 +351,7 @@
     </footer>
 
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
