--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<!--Шапка сайта-->
 	<header class="header ">
-		<div class="container">
+		<div class="container container__header">
 			<div class="header__mobile">
 				<a href="./index.html" class="header__logo link"><span class="header__span">Web</span>Studio</a>
 				<button type="button" class="mobile-btn" aria-expanded="false">
@@ -31,7 +31,7 @@
 					</svg>
 				</button>
 			</div>
-			<div class="header__wrapper ">
+			<div class="header__wrapper">
 				<nav class="header__nav">
 
 					<ul class="header__list list">
