ready for 1600px

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 
     <!-- Header -->
     <header class="header ">
-        <div class="container">
+        <div class="container container__header">
             <div class="header__mobile">
                 <a href="./index.html" class="header__logo link"><span class="header__span">Web</span>Studio</a>
                 <button type="button" class="mobile-btn" aria-expanded="false">
@@ -31,11 +31,11 @@
                     </svg>
                 </button>
             </div>
-            <div class="header__wrapper ">
+            <div class="header__wrapper">
                 <nav class="header__nav">
 
                     <ul class="header__list list">
-                        <li class="header__item"><a class="header__link link" href="./index.html">Студія</a></li>
+                        <li class="header__item"><a class="header__link" href="./index.html">Студія</a></li>
                         <li class="header__item"><a class="header__link link header__link--current"
                                 href="./portfolio.html">Портфоліо</a></li>
                         <li class="header__item"><a class="header__link link" href="#">Контакти</a></li>
