--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
 
 				<ul class="team__list list">
 					<li class="team__item">
-						<img src="./img/igord.jpg" alt="Ігор Дем'яненко" class="team__img" width="270">
+						<img srcset="./img/igord.jpg 1x, ./img/igord@2x.jpg 2x" src="./img/igord.jpg"
+							alt="Ігор Дем'яненко" class="team__img" width="270">
 						<h3 class="team__title">Ігор Дем'яненко</h3>
 						<p class="team__subtxt">Product Designer</p>
 						<ul class="team-social__list list">
@@ -229,7 +230,8 @@
 					</li>
 
 					<li class="team__item">
-						<img src="./img/olgar.jpg" alt="Ольга Рєпіна" width="270" class="team__img">
+						<img srcset="./img/olgar.jpg 1x, ./img/olgar@2x.jpg 2x" src="./img/olgar.jpg" alt="Ольга Рєпіна"
+							width="270" class="team__img">
 						<h3 class="team__title">Ольга Рєпіна</h3>
 						<p class="team__subtxt">Frontend Developer</p>
 						<ul class="team-social__list  list">
@@ -266,7 +268,8 @@
 					</li>
 
 					<li class="team__item">
-						<img src="./img/mukolat.jpg" alt="Микола Тарасов" width="270" class="team__img">
+						<img srcset="./img/mukolat.jpg 1x, ./img/mukolat@2x.jpg 2x" src="./img/mukolat.jpg"
+							alt="Микола Тарасов" width="270" class="team__img">
 						<h3 class="team__title">Микола Тарасов</h3>
 						<p class="team__subtxt">Marketing</p>
 						<ul class="team-social__list  list">
@@ -303,7 +306,8 @@
 					</li>
 
 					<li class="team__item">
-						<img src="./img/misha.jpg" alt="Михайло Єрмаков" width="270" class="team__img">
+						<img srcset="./img/misha.jpg 1x, ./img/misha@2x.jpg 2x" src="./img/misha.jpg"
+							alt="Михайло Єрмаков" width="270" class="team__img">
 						<h3 class="team__title">Михайло Єрмаков</h3>
 						<p class="team__subtxt">UI Designer</p>
 						<ul class="team-social__list  list">
