chaned btn close and open, fixed hero img

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 			<div class="header__mobile">
 				<a href="./index.html" class="header__logo link"><span class="header__span">Web</span>Studio</a>
 				<button type="button" class="mobile-btn" aria-expanded="false">
-					<svg width="24" height="16" aria-label="Перемикач меню">
-						<use class="icon-menu" href="./img/mobile-btn.svg#icon-menu"></use>
-						<use class="icon-close" href="./img/mobile-btn.svg#icon-close"></use>
+					<svg width="40" height="40" aria-label="Перемикач меню" class="icon-menu">
+						<use href="./img/menu.svg#icon-menu-m"></use>
+					</svg>
+					<svg width="40" height="40" aria-label="Перемикач меню" class="icon-close">
+						<use href="./img/menu.svg#icon-close-m"></use>
 					</svg>
 				</button>
 			</div>
