--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 					</svg>
 				</button>
 			</div>
-			<div class="header__wrapper">
-				<nav class="header__nav">
 
+			<div class="header__wrapper">
+
+				<nav class="header__nav">
 					<ul class="header__list list">
 						<li class="header__item"><a class="header__link link header__link--current"
 								href="./index.html">Студія</a></li>
@@ -87,6 +88,49 @@
 					</ul>
 				</div>
 
+			</div>
+
+			<div class="heder_mob1">
+				<ul class="adress__nav list">
+					<li class="adress__item">
+						<a href="mailto:info@devstudio.com" class="adress__link link">
+							<svg class="adress__icon-post adress__icon">
+								<use href="./img/sprite.svg#icon-post"></use>
+							</svg>
+							info@devstudio.com</a>
+					</li>
+
+					<li class="adress__item">
+						<a href="tel:+380961111111" class="adress__link link">
+							<svg class="adress__icon-phone adress__icon">
+								<use href="./img/sprite.svg#icon-phone"></use>
+							</svg>
+							+38 096 111 11 11</a>
+					</li>
+				</ul>
+
+				<ul class="header-social__list list">
+					<li class="header-social__item">
+						<a href="#" class="header-social-link " target="_blank" rel="noreferrer noopener nofollow">
+							Instagram
+						</a>
+					</li>
+					<li class="header-social__item">
+						<a href="#" class="header-social-link " target="_blank" rel="noreferrer noopener nofollow">
+							Twitter
+						</a>
+					</li>
+					<li class="header-social__item">
+						<a href="#" class="header-social-link " target="_blank" rel="noreferrer noopener nofollow">
+							Facebook
+						</a>
+					</li>
+					<li class="header-social__item">
+						<a href="#" class="header-social-link " target="_blank" rel="noreferrer noopener nofollow">
+							Linkedin
+						</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 
