--- a/portfolio.html
+++ b/portfolio.html
@@ -25,23 +25,72 @@
             <div class="header__mobile">
                 <a href="./index.html" class="header__logo link"><span class="header__span">Web</span>Studio</a>
                 <button type="button" class="mobile-btn" aria-expanded="false">
-                    <svg width="24" height="16" aria-label="Перемикач меню">
-                        <use class="icon-menu" href="./img/mobile-btn.svg#icon-menu"></use>
-                        <use class="icon-close" href="./img/mobile-btn.svg#icon-close"></use>
+                    <svg width="40" height="40" aria-label="Перемикач меню" class="icon-menu">
+                        <use href="./img/menu.svg#icon-menu-m"></use>
+                    </svg>
+                    <svg width="40" height="40" aria-label="Перемикач меню" class="icon-close">
+                        <use href="./img/menu.svg#icon-close-m"></use>
                     </svg>
                 </button>
             </div>
-            <div class="header__wrapper">
-                <nav class="header__nav">
 
+            <div class="header__wrapper">
+
+                <nav class="header__nav">
                     <ul class="header__list list">
-                        <li class="header__item"><a class="header__link link" href="./index.html">Студія</a></li>
+                        <li class="header__item"><a class="header__link link " href="./index.html">Студія</a></li>
                         <li class="header__item"><a class="header__link link header__link--current"
                                 href="./portfolio.html">Портфоліо</a></li>
                         <li class="header__item"><a class="header__link link" href="#">Контакти</a></li>
                     </ul>
                 </nav>
 
+                <div class="heder_mob">
+                    <ul class="adress__nav list">
+                        <li class="adress__item">
+                            <a href="mailto:info@devstudio.com" class="adress__link link">
+                                <svg class="adress__icon-post adress__icon">
+                                    <use href="./img/sprite.svg#icon-post"></use>
+                                </svg>
+                                info@devstudio.com</a>
+                        </li>
+
+                        <li class="adress__item">
+                            <a href="tel:+380961111111" class="adress__link link">
+                                <svg class="adress__icon-phone adress__icon">
+                                    <use href="./img/sprite.svg#icon-phone"></use>
+                                </svg>
+                                +38 096 111 11 11</a>
+                        </li>
+                    </ul>
+
+                    <ul class="header-social__list list">
+                        <li class="header-social__item">
+                            <a href="#" class="header-social-link " target="_blank" rel="noreferrer noopener nofollow">
+                                Instagram
+                            </a>
+                        </li>
+                        <li class="header-social__item">
+                            <a href="#" class="header-social-link " target="_blank" rel="noreferrer noopener nofollow">
+                                Twitter
+                            </a>
+                        </li>
+                        <li class="header-social__item">
+                            <a href="#" class="header-social-link " target="_blank" rel="noreferrer noopener nofollow">
+                                Facebook
+                            </a>
+                        </li>
+                        <li class="header-social__item">
+                            <a href="#" class="header-social-link " target="_blank" rel="noreferrer noopener nofollow">
+                                Linkedin
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+
+            <div class="heder_mob1">
                 <ul class="adress__nav list">
                     <li class="adress__item">
                         <a href="mailto:info@devstudio.com" class="adress__link link">
@@ -82,7 +131,6 @@
                         </a>
                     </li>
                 </ul>
-
             </div>
         </div>
 
